fixing IE specific style sheet: aligning text to the left

--- a/public/css/ie.css
+++ b/public/css/ie.css
@@ -12,7 +12,7 @@
 ----------------------------------------------------------------------- */
 
 /* ie.css */
-body {text-align:center;}
+body {text-align:left;}
 .container {text-align:left;}
 * html .column {overflow-x:hidden;}
 * html legend {margin:-18px -8px 16px 0;padding:0;}
